[tool.poetry]
name = "programmable-vi-pldi-2024"
version = "0.0.1"
description = "The evaluation artifact for Probabilistic Programming with Programmable Variational Inference."
authors = ["McCoy Becker <mccoyb@mit.edu>", "Alexander Lew <alexlew@mit.edu>", "Xiaoyan Wang <xyw@mit.edu>", "Matin Ghavami <mghavami@mit.edu>", "Mathieu Huot <mhuot@mit.edu>", "Martin Rinard <rinard@mit.edu>", "Vikash Mansingkha <vkm@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
# adevjax = {path = "adevjax"}
# enjax = {path = "genjax", develop = true}
python = ">=3.9,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
